# bottomless-pit

./: .gitignore  Cargo.toml  LICENSE  README.md  settings.bps
crates/animation/: Cargo.toml
crates/animation/src/: attack.rs  hitbox.rs  lib.rs  player.rs
crates/bottomless-pit/: Cargo.toml
crates/bottomless-pit/src/: app.rs  cache.rs  camera.rs  colour.rs  draw_queue.rs  engine_handle.rs  game.rs  input.rs  lib.rs  line.rs  main.rs  matrix_math.rs  menu_manger.rs  rect.rs  render.rs  text.rs  texture.rs  vectors.rs  vertex.rs
crates/bottomless-pit/src/player/: attack.rs  mod.rs  player.rs
crates/bottomless-pit/src/settings/: mod.rs
crates/bottomless-pit/src/ui_elements/: arrow_selection.rs  button.rs  mod.rs  ui_scene.rs
crates/input-handler/: Cargo.toml
crates/input-handler/src/: buffer.rs  inputs.rs  lib.rs
crates/text-render/: Cargo.toml
crates/text-render/src/: builder.rs  lib.rs  pipeline.rs  text-shader.wgsl
crates/text-render/src/pipeline/: cache.rs
crates/ui/: Cargo.toml
crates/ui/src/: arrow_selection.rs  button.rs  key_changer.rs  lib.rs  ui_scene.rs  ui_utils.rs
crates/utils/: Cargo.toml
crates/utils/src/: collide.rs  lib.rs  point.rs  states.rs  text.rs
crates/wgpu_glyph/: LICENSE
crates/wgpu_glyph/src/: lib.rs  pipeline.rs
crates/wgpu_glyph/src/pipeline/: cache.rs
crates/wgpu_glyph/src/shader/: glyph.wgsl
design-docs/: BP loading.md  Drop Order Shenanigans.md  Web Deploy.md
examples/: camera.rs  circularmovment.wgsl  debug_triangle.rs  fractal.rs  fractal.wgsl  input.rs  light.wgsl  lightmap.rs  lightmap.wgsl  line.rs  mouse.wgsl  movement.wgsl  ngon.rs  rectangles.rs  resource.rs  shader.rs  sinewaves.wgsl  solidcolour.wgsl  text.rs  texture.rs
examples/debug triangle/: Cargo.toml
examples/rectangle/: Cargo.toml
examples/rectangle/src/: main.rs
examples/shader/: Cargo.toml  shader.wgsl
examples/shader/src/: main.rs  shader.wgsl
examples/sliding cube/src/: main.rs
examples/text/: Cargo.toml
examples/texture/: Cargo.toml
examples/texture/src/: main.rs
examples/triangle example/: Cargo.toml
src/: buffer.rs  button.rs  camera.rs  colour.rs  context.rs  draw_queue.rs  engine_handle.rs  game.rs  input.rs  io.rs  layouts.rs  lib.rs  main.rs  material.rs  matrix_math.rs  menus.rs  rect.rs  render.rs  resource.rs  resource_cache.rs  scene.rs  shader.rs  shader.wgsl  text.rs  texture.rs  vectors.rs  vertex.rs
src/glyphon/: error.rs  text_atlas.rs  text_render.rs
src/menus/: main_menu.rs  sub_menu_test.rs
src/player/: mod.rs
src/settings/: mod.rs
src/shaders/: line_shader.wgsl  shader.wgsl
src/ui_elements/: arrow_selection.rs  button.rs  mod.rs
src/utils/: collide.rs  mod.rs  point.rs  text.rs
src/wgpu_glyph/: builder.rs  mod.rs  pipeline.rs
src/wgpu_glyph/pipeline/: cache.rs
