[package]
name = "bottomless-pit"
description = "A very simple 2D rendering/game engine inspired by raylib"
version = "0.2.0"
repository = "https://github.com/EggShark/bottomless-pit"
keywords = ["bottomless-pit", "bp", "2D", "game", "engine"]
authors = ["Charles Crabtree <charles.crabtree@turtlebamboo.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
categories = ["game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.12.3", features = ["derive"]}
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.2.5"
winit = "0.28.2"
cgmath = "0.18.0"
glyph_brush = "0.7"
spin_sleep = "1.1.1"
encase = "0.6.1"
etagere = "0.2.8"
cosmic-text = "0.10"
lru = "0.11"

[dependencies.wgpu]
version = "0.18.0"
default-features = true
features = ["expose-ids"]

[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]
