[package]
name = "bottomless-pit"
description = "A very simple 2D rendering/game engine inspired by raylib"
version = "0.4.0"
repository = "https://github.com/EggShark/bottomless-pit"
keywords = ["bottomless-pit", "bp", "2D", "game", "engine"]
authors = ["Charlotte Crabtree <eggshark@eggshark.dev>"]
edition = "2021"
license = "MIT"
readme = "README.md"
categories = ["game-engines"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = {version = "1.12.3", features = ["derive"]}
env_logger = "0.10.0"
log = "0.4.17"
pollster = "0.2.5"
winit = "0.30.8"
spin_sleep = "1.1.1"
encase = "0.6.1"
etagere = "0.2.8"
lru = "0.11"
cfg-if = "1.0.0"
web-time = "0.2.3"
futures = {version = "0.3.29", features = ["thread-pool"]}
glyphon = {git = "https://github.com/grovesNL/glyphon.git"}

[dependencies.wgpu]
version = "24"
default-features = true

[dependencies.glam]
version = "0.25.0"
features = ["std", "bytemuck"]


[dependencies.image]
version = "0.24"
default-features = false
features = ["png", "jpeg"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "24", features = ["webgl"]}
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
    "Request",
    "Response",
    "Node",
]}
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"
js-sys = "0.3"
