[package]
name = "bottomless-pit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = {path="../utils"}
ui = {path="../ui"}
animation = {path="../animation"}
input-handler = {path="../input-handler"}
raylib = "3.7.0"